Get simulation working with GUI code (WIP)
Co-authored-by: NiallSom <niallsomers205@gmail.com>
Co-authored-by: tola bowen maccurtain <tolabmac@gmail.com>