@@ -1,6 +1,11 @@
 package simulation;
 
 import ui.AbstractGuiFactory;
+import ui.AisleGui;
+import ui.PersonGui;
+import ui.SeatGui;
+import interceptor.Dispatcher;
+import interceptor.Context;
 
 import java.util.*;
 
@@ -12,6 +17,10 @@ public class Simulation {
     private final List<Strategy> strategies;
     private final ArrayList<Person> cage = new ArrayList<>();
     private final Person[] aisle;
+    private final PersonGui personGui;
+    private final AisleGui aisleGui;
+    private final SeatGui seatGui;
+    private final ArrayList<Seat> filledSeats = new ArrayList<>();
 
     /**
      * @param rows       The number of rows of seats
@@ -20,14 +29,21 @@ public class Simulation {
      * @param guiFactory If empty, the simulation is run with no visuals
      */
     public Simulation(int rows, int cols, List<Strategy> strategies, Optional<AbstractGuiFactory> guiFactory) {
+        Context context = Dispatcher.before("Simulation.constructor", rows, cols, strategies, guiFactory);
         this.rows = rows;
         this.cols = cols;
         this.strategies = strategies;
         aisle = new Person[rows];
-        // TODO create GUI painters
+        // TODO
+        AbstractGuiFactory factory = guiFactory.get();
+        this.personGui = factory.createPersonGui();
+        this.aisleGui = factory.createAisleGui();
+        this.seatGui = factory.createSeatGui();
+        Dispatcher.after(context, null);
     }
 
     private void setup(Strategy strategy) {
+        Context context = Dispatcher.before("Simulation.setup", strategy);
         for (int i = 0; i < rows; i++) {
             for (int j = 0; j < cols; j++) {
                 Seat seat = new Seat(i, j);
@@ -47,48 +63,32 @@ public class Simulation {
             }
         }
         strategy.sortPassengers(cage);
+        Dispatcher.after(context, null);
     }
 
     private void movePerson(Person p, int index) {
+        Context context = Dispatcher.before("Simulation.movePerson", p, index);
         if (aisle[index] != null) {
-            throw new RuntimeException("Someone is already in the " + index + " position");
+            Dispatcher.after(context, null);
+            return;
         }
         aisle[index] = p;
+        aisle[index - 1] = null;
+        p.setX(index);
+        Dispatcher.after(context, null);
     }
 
     private int mainLoop() {
-        int seatedPassengers = 0;
+        Context context = Dispatcher.before("Simulation.mainLoop");
         int tick = 0;
         int passengers = cage.size();
-
-        while (seatedPassengers < passengers) {
-            System.out.println("\n=== Tick " + tick + " ===");
-            
-            // Print cage status
-            System.out.println("Cage (" + cage.size() + " people):");
-            for (Person p : cage) {
-                System.out.println("  - Person for seat " + p.getSeat());
-            }
-            
-            // Print aisle status
-            System.out.println("\nAisle:");
-            for (int i = 0; i < aisle.length; i++) {
-                if (aisle[i] != null) {
-                    Person p = aisle[i];
-                    String status = p.isStowingBags() ? " (stowing bags, counter: " + p.getCounter() + ")" : 
-                                  p.isSeated() ? " (seated)" : " (walking)";
-                    System.out.println("  Position " + i + ": Person for seat " + p.getSeat() + status);
-                } else {
-                    System.out.println("  Position " + i + ": empty");
-                }
-            }
-
+        while (filledSeats.size() < passengers) {
             // Try to move a person from cage to aisle if first position is empty
             if (!cage.isEmpty() && aisle[0] == null) {
-                Person p = cage.remove(0);
+                Person p = cage.removeFirst();
                 p.setX(0);
                 aisle[0] = p;
-                System.out.println("\nMoved new person to aisle position 0 (heading to seat " + p.getSeat() + ")");
+                // TODO don't move him on
             }
 
             for (int i = aisle.length - 1; i >= 0; i--) {
@@ -99,57 +99,73 @@ public class Simulation {
                 if (isPassengerAtSeat(p)) {
                     if (isPassengerReadyToSitDown(p)) {
                         aisle[i] = null;
-                        seatedPassengers++;
+                        filledSeats.add(p.getSeat());
                         p.setSeated(true);
-                        System.out.println("Person at position " + i + " sat down at their seat " + p.getSeat());
                     } else if (p.isStowingBags()) {
-                        int oldCounter = p.getCounter();
                         p.decrementCounter();
-                        System.out.println("Person at position " + i + " is stowing bags (counter decreased from " + oldCounter + " to " + p.getCounter() + ")");
                     } else {
                         p.startStowingBags();
-                        System.out.println("Person at position " + i + " started stowing bags (counter initialized to " + p.getCounter() + ")");
                     }
-                } else if (i < aisle.length - 1 && aisle[i + 1] == null) {
-                    aisle[i + 1] = p;
-                    aisle[i] = null;
-                    p.setX(p.getX() + 1);
-                    System.out.println("Person moved from position " + i + " to " + (i + 1));
+                } else {
+                    movePerson(p, p.getX() + 1);
                 }
             }
-            
-            tick++;
             paintGui();
-            
-            // Add a small delay to make it easier to follow
-            try {
-                Thread.sleep(1000);
-            } catch (InterruptedException e) {
-                Thread.currentThread().interrupt();
-            }
+            tick++;
         }
+        Dispatcher.after(context, tick);
         return tick;
     }
 
     private void paintGui() {
-        // TODO use Frizzle's code
+        Context context = Dispatcher.before("Simulation.paintGui");
+        aisleGui.paint(this.rows);
+        for (Person p : aisle) {
+            if (p == null) continue;
+            personGui.paint(p);
+        }
+        for (int row = 0; row < rows; row++) {
+            for (int col = 0; col < cols; col++) {
+                Seat seat = new Seat(row, col);
+                if (filledSeats.contains(seat)) {
+                    seatGui.paintFull(new Seat(row, col), cols);
+                } else {
+                    seatGui.paintEmpty(new Seat(row, col), cols);
+                }
+            }
+        }
+        try {
+            Thread.sleep(500);
+        } catch (InterruptedException e) {
+            throw new RuntimeException(e);
+        }
+        Dispatcher.after(context, null);
     }
 
     private boolean isPassengerAtSeat(Person p) {
-        return p.getX() == p.getSeat().row();
+        Context context = Dispatcher.before("Simulation.isPassengerAtSeat", p);
+        boolean result = p.getX() == p.getSeat().row();
+        Dispatcher.after(context, result);
+        return result;
     }
 
     private boolean isPassengerReadyToSitDown(Person p) {
-        return p.isStowingBags() && p.getCounter() == 0;
+        Context context = Dispatcher.before("Simulation.isPassengerReadyToSitDown", p);
+        boolean result = p.isStowingBags() && p.getCounter() == 0;
+        Dispatcher.after(context, result);
+        return result;
     }
 
     public SimulationResults run() {
+        Context context = Dispatcher.before("Simulation.run");
         HashMap<Strategy, Integer> results = new HashMap<>();
         for (Strategy strategy : strategies) {
             setup(strategy);
             int timeTaken = mainLoop();
             results.put(strategy, timeTaken);
         }
-        return new SimulationResults(results);
+        SimulationResults simulationResults = new SimulationResults(results);
+        Dispatcher.after(context, simulationResults);
+        return simulationResults;
     }
 }
